@@ -100,10 +100,11 @@ public class GetQueryDetailsAction extends ReadOnlyApiAction<GetQueryDetailsActi
             throw new NotFoundException("SchemaName not specified");
 
         QuerySchema querySchema = DefaultSchema.get(user, container, form.getSchemaName());
-        if (!(querySchema instanceof UserSchema))
-            // Don't echo the provided schema name. See #44528.
+        if (!(querySchema instanceof UserSchema schema))
+        {
+            // Issue 44528: Don't echo the provided schema name.
             throw new NotFoundException("Could not find the specified schema in the folder '" + container.getPath() + "'");
-        UserSchema schema = (UserSchema)querySchema;
+        }
 
         QuerySettings settings = schema.getSettings(getViewContext(), QueryView.DATAREGIONNAME_DEFAULT, form.getQueryName());
         QueryDefinition queryDef = settings.getQueryDef(schema);
@@ -179,8 +180,7 @@ public class GetQueryDetailsAction extends ReadOnlyApiAction<GetQueryDetailsActi
         resp.put("title", tinfo.getTitle());
         resp.put("titleColumn", tinfo.getTitleColumn());
 
-
-        //8649: let the table provide the view data url
+        // Issue 8649: let the table provide the view data url
         ActionURL viewDataUrl = schema.urlFor(QueryAction.executeQuery, queryDef);
         if (null != viewDataUrl)
             resp.put("viewDataUrl", viewDataUrl);
@@ -323,7 +323,7 @@ public class GetQueryDetailsAction extends ReadOnlyApiAction<GetQueryDetailsActi
             Map<String, CustomView> allViews = queryDef.getCustomViews(getUser(), getViewContext().getRequest(), true, false);
             Set<String> viewNames = new CaseInsensitiveHashSet("");
             if (form.getViewName() != null)
-                viewNames.addAll(Arrays.stream(form.getViewName()).map(StringUtils::trimToEmpty).collect(toList()));
+                viewNames.addAll(Arrays.stream(form.getViewName()).map(StringUtils::trimToEmpty).toList());
 
             if (viewNames.contains("*"))
             {
